Require python-swiftclient that supports timeouts
We now set a 60 second timeout on HTTP operations for Swift.
Previously, and with older versions of python-swiftclient there was no
timeout.  A hung connection that the server forgot about would hang
forever and not allow the backup process to complete.  Or even log an
error about the missed metric.

This should log an exception when a connection is hung / timeout that we
can at least dig out of the log files.  It should also successfully
complete.

--- a/debian/control
+++ b/debian/control
@@ -8,7 +8,7 @@ Homepage: https://github.com/jjneely/whisper-backup
 
 Package: whisper-backup
 Architecture: all
-Depends: ${shlibs:Depends}, ${misc:Depends}, python-swiftclient, python-boto
+Depends: ${shlibs:Depends}, ${misc:Depends}, python-swiftclient (>= 3.0.0), python-boto
 Description: Backup Graphite Whisper files to reliable storage.
  Backup Graphite's storage directory full of Whisper files to reliable
  storage including AWS S3 and OpenStack Swift.  Multi-process and fast
